ADD restructuration elements

--- a/.gitignore
+++ b/.gitignore
@@ -1,39 +1,16 @@
-target/
-!.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**/target/
-!**/src/test/**/target/
+# editors
 
-### IntelliJ IDEA ###
-.idea/modules.xml
-.idea/jarRepositories.xml
-.idea/compiler.xml
-.idea/libraries/
-*.iws
-*.iml
-*.ipr
+*.vscode
+*.idea
 
-### Eclipse ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
+# sensible file
 
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
-build/
-!**/src/main/**/build/
-!**/src/test/**/build/
+*.env
+*.env.*
+*.secret
 
-### VS Code ###
-.vscode/
+# un useful files
 
-### Mac OS ###
-.DS_Store
-deployment
+**/coverage
+
+# programming langage file
